changing application name

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "react-profile",
-  "homepage": "http://knightmac19.github.io/R-profile",
+  "homepage": "http://knightmac19.github.io/P_Dunn_Portfolio",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
